# Fundamentals-of-AI-Engineering

./: PRESTUDY.md  README.md  SYLLABUS.md  UPDATE_SUMMARY.md  assignments.md  capstone.md  requirement.txt  trial.py  update_course_materials.py
.backup_20260402_135403/: 01_environment_setup.ipynb  01_environment_setup.md  01_local_inference_setup.ipynb  01_local_inference_setup.md  01_tokens_context.ipynb  01_tokens_context.md  01_training_loop.ipynb  01_training_loop.md  02_data_profiling_script.ipynb  02_data_profiling_script.md  02_ollama_http_client.ipynb  02_ollama_http_client.md  02_prompt_contracts.ipynb  02_prompt_contracts.md  02_reproducibility_package.ipynb  02_reproducibility_package.md  03_benchmarking_script.ipynb  03_benchmarking_script.md  (+23 more)
old_v1/week_02/: 01_training_loop.md  02_reproducibility_package.ipynb  02_reproducibility_package.md  03_compare_runs_report.ipynb  03_compare_runs_report.md  README.md  pyproject.toml  requirements.txt  sample_synthetic.csv  train.py  tutorial.md
old_v1/week_02/artifacts/run_20260210_073204/: config.json  metrics.json  model.joblib
old_v1/week_02/artifacts/run_20260210_073210/: config.json  metrics.json  model.joblib  val_report.txt
old_v1/week_02/artifacts/run_20260210_084244/: config.json  metrics.json  requirements.txt  run_metadata.json
old_v1/week_02/artifacts/run_20260210_084248/: config.json  metrics.json  model.joblib  run_metadata.json  val_report.txt
old_v1/week_02/ml_package/: comparison.py  trainer.py
old_v1/week_02/reports/: comparison_report.md  dashboard.md  runs.json  summary.json
(+271 files in other folders)
