[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ml-training-package"
version = "0.1.0"
description = "A reproducible ML training package for Week 2"
authors = [{name = "AI Engineering Course"}]
requires-python = ">=3.8"
dependencies = [
    "pandas>=2.0.0",
    "scikit-learn>=1.0.0",
    "joblib>=1.0.0",
    "numpy>=1.20.0",
]

[project.scripts]
train = "train:main"
compare-runs = "compare_runs:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["ml_package*"]
